fix tcp sequence number (one character is counted as one byte, even if this is not valid in all cases since the data is managed as java string.)